--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,9 +9,11 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+        rel="stylesheet">
     <title>BOOKI</title>
 </head>
+
 <body>
     <header>
         <div id="logo">
@@ -25,7 +28,7 @@
             </div>
         </nav>
     </header>
-    <div id="before-main">
+    <section id="before-main">
         <div id="accroche">
             <h1>Trouver votre hébergement pour des vacances de rêve</h1>
             <p>En plein centre-ville ou pleine nature</p>
@@ -44,7 +47,7 @@
                 <div id="button-search">
                     <button type="submit">Rechercher</button>
                 </div>
-            </div>     
+            </div>
             <div id="filter">
                 <h3>Filtres</h3>
                 <div id="button-filter">
@@ -53,13 +56,16 @@
                         <p>Économique</p>
                     </div>
                     <div class="button">
-                        <i class="fa-solid fa-person"></i><p>Familial</p>
+                        <i class="fa-solid fa-person"></i>
+                        <p>Familial</p>
                     </div>
                     <div class="button">
-                        <i class="fa-solid fa-heart"></i><p>Romantique</p>
+                        <i class="fa-solid fa-heart"></i>
+                        <p>Romantique</p>
                     </div>
                     <div class="button">
-                        <i class="fa-solid fa-dog"></i><p>Animaux autorisés</p>
+                        <i class="fa-solid fa-dog"></i>
+                        <p>Animaux autorisés</p>
                     </div>
                 </div>
             </div>
@@ -70,15 +76,18 @@
                 <p>Plus de 500 logements sont disponibles dans cette ville</p>
             </div>
         </form>
-    </div>
+    </section>
     <main>
         <section id="hebergements">
-            <div id="titre-hebergement"> <h2> Hébergement à Marseille</h2></div>
+            <div id="titre-hebergement">
+                <h2> Hébergement à Marseille</h2>
+            </div>
             <div id="annonce-hebergement">
                 <a class="lien-card-hebergement " href="#">
                     <article class="card-hebergement">
                         <div>
-                            <img src="img/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="photo-auberge-la-canebiere">
+                            <img src="img/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg"
+                                alt="photo-auberge-la-canebiere">
                         </div>
                         <div class="card-text">
                             <h2>Auberge La Canebière</h2>
@@ -96,7 +105,8 @@
                 <a class="lien-card-hebergement" href="#">
                     <article class="card-hebergement">
                         <div>
-                            <img src="img/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="photo-hotel-du-port">
+                            <img src="img/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg"
+                                alt="photo-hotel-du-port">
                         </div>
                         <div class="card-text">
                             <h2>Hôtel du port</h2>
@@ -114,7 +124,8 @@
                 <a class="lien-card-hebergement" href="#">
                     <article class="card-hebergement">
                         <div>
-                            <img src="img/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="photo-hotel-les-mouettes">
+                            <img src="img/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg"
+                                alt="photo-hotel-les-mouettes">
                         </div>
                         <div class="card-text">
                             <h2>Hôtel Les mouettes</h2>
@@ -132,7 +143,8 @@
                 <a class="lien-card-hebergement" href="#">
                     <article class="card-hebergement">
                         <div>
-                           <img src="img/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="photo-hotel-de-la-mer">
+                            <img src="img/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg"
+                                alt="photo-hotel-de-la-mer">
                         </div>
                         <div class="card-text">
                             <h2>Hôtel de la mer</h2>
@@ -150,7 +162,8 @@
                 <a class="lien-card-hebergement" href="#">
                     <article class="card-hebergement">
                         <div>
-                            <img src="img/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="photo-auberge-le-panier">
+                            <img src="img/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg"
+                                alt="photo-auberge-le-panier">
                         </div>
                         <div class="card-text">
                             <h2>Auberge Le Panier</h2>
@@ -168,7 +181,8 @@
                 <a class="lien-card-hebergement" href="#">
                     <article class="card-hebergement">
                         <div>
-                            <img src="img/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="photo-hotel-chez-Amima">
+                            <img src="img/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg"
+                                alt="photo-hotel-chez-Amima">
                         </div>
                         <div class="card-text">
                             <h2>Hôtel Chez Amina</h2>
@@ -186,7 +200,9 @@
             </div>
             <div id="plus">
                 <div id="texte-plus">
-                    <a href="#"><p>Afficher plus </p></a>
+                    <a href="#">
+                        <p>Afficher plus </p>
+                    </a>
                 </div>
             </div>
         </section>
@@ -199,7 +215,8 @@
                 <a class="lien-card-populaires" href="#">
                     <article class="card-populaires">
                         <div>
-                            <img src="img/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="photo-hotel-le-soleil-du-matin">
+                            <img src="img/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg"
+                                alt="photo-hotel-le-soleil-du-matin">
                         </div>
                         <div class="text-etoile">
                             <div class="card-text">
@@ -214,12 +231,13 @@
                                 <i class="fa-regular fa-star fa-xs transparent"></i>
                             </div>
                         </div>
-                    </article> 
+                    </article>
                 </a>
                 <a class="lien-card-populaires" href="#">
                     <article class="card-populaires">
                         <div>
-                            <img src="img/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="photo-chambre-hotes-au-coeur-de-leau">
+                            <img src="img/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg"
+                                alt="photo-chambre-hotes-au-coeur-de-leau">
                         </div>
                         <div class="text-etoile">
                             <div class="card-text">
@@ -234,12 +252,13 @@
                                 <i class="fa-regular fa-star fa-xs transparent"></i>
                             </div>
                         </div>
-                    </article> 
+                    </article>
                 </a>
                 <a class="lien-card-populaires" href="#">
                     <article class="card-populaires">
                         <div>
-                            <img src="img/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="photo-hotel-bleu-et-blanc">
+                            <img src="img/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg"
+                                alt="photo-hotel-bleu-et-blanc">
                         </div>
                         <div class="text-etoile">
                             <div class="card-text">
@@ -254,7 +273,7 @@
                                 <i class="fa-regular fa-star fa-xs transparent"></i>
                             </div>
                         </div>
-                    </article> 
+                    </article>
                 </a>
             </div>
         </section>
@@ -267,17 +286,19 @@
             <a class="lien-card-activites" href="#">
                 <article class="card-activites">
                     <div>
-                        <img src="img/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg" alt="photo-du-vieux-port">
+                        <img src="img/activites/4_small/reno-laithienne-QUgJhdY5Fyk-unsplash.jpg"
+                            alt="photo-du-vieux-port">
                     </div>
                     <div class="card-texte">
                         <h2>Vieux-Port</h2>
                     </div>
-                </article> 
+                </article>
             </a>
             <a class="lien-card-activites" href="#">
                 <article class="card-activites">
                     <div>
-                        <img src="img/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg" alt="photo-fort-de-pomegues">
+                        <img src="img/activites/4_small/paul-hermann-QFTrLdQIRhI-unsplash.jpg"
+                            alt="photo-fort-de-pomegues">
                     </div>
                     <div class="card-texte">
                         <h2>Fort de Pomègues</h2>
@@ -287,7 +308,8 @@
             <a class="lien-card-activites" href="#">
                 <article class="card-activites">
                     <div>
-                        <img src="img/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg" alt="photo-parc-national-des-calanques">
+                        <img src="img/activites/4_small/kilyan-sockalingum-NR8-cBCN3aI-unsplash.jpg"
+                            alt="photo-parc-national-des-calanques">
                     </div>
                     <div class="card-texte">
                         <h2>Parc national des Calanques</h2>
@@ -297,7 +319,8 @@
             <a class="lien-card-activites" href="#">
                 <article class="card-activites">
                     <div>
-                        <img src="img/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg" alt="photo-de-notre-dame-de-la-garde">
+                        <img src="img/activites/4_small/florian-wehde-xW9e8gdotxI-unsplash.jpg"
+                            alt="photo-de-notre-dame-de-la-garde">
                     </div>
                     <div class="card-texte">
                         <h2>Notre-Dame-de-la-Garde</h2>
@@ -305,7 +328,7 @@
                 </article>
             </a>
         </div>
-        
+
     </section>
     <footer>
         <div class="list">
@@ -333,4 +356,5 @@
     </footer>
     <script src="https://kit.fontawesome.com/cafdebc84b.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
