--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>BOOKI</title>
 </head>
 
-<body>
+<body> 
     <header>
         <div id="logo">
             <img src="img/logo/Booki.png" alt="logo-du-site">
@@ -80,7 +80,7 @@
     <main>
         <section id="hebergements">
             <div id="titre-hebergement">
-                <h2> Hébergement à Marseille</h2>
+                <h2> Hébergements à Marseille</h2>
             </div>
             <div id="annonce-hebergement">
                 <a class="lien-card-hebergement " href="#">
